# Steam-Deck-Remote-Control

./: CMakeLists.txt  README.md  build.sh
inc/: App.h  AppLogger.h  LogWrapper.h  Renderer.h  Visual.h  VisualMgr.h  Window.h
src/: App.cpp  AppLogger.cpp  CMakeLists.txt  InputMgr.cpp  LogWrapper.cpp  Renderer.cpp  StateMgr.cpp  Visual.cpp  VisualMgr.cpp  Window.cpp  main.cpp
